# io-chess-engine

./: .gitignore  .gitmodules  Doxyfile  README.md
.github/workflows/: docs.yml
data/: download.sh  prepare_dataset.py  shuffle_dataset.sh
docs/: DoxygenLayout.xml  data.dox  doxygen-awesome-sidebar-only-darkmode-toggle.css  engine.dox  header.html  mainpage.dox  moe_ascii.txt  preprocessing.dox  training.dox
engine/: CMakeLists.txt  download_onnxruntime.sh
engine/src/: Types.h  feature_api.cpp  main.cpp
engine/src/book/: polyglot_book.cpp  polyglot_book.hpp  polyglot_keys.cpp  polyglot_keys.hpp
engine/src/eval/: BatchEvalContext.h  EvalContext.cpp  EvalContext.h  EvalContextMoE.cpp  EvalContextMoE.h  EvalContextMoECache.cpp  EvalContextMoECache.h  EvalUtils.h  Evaluator.cpp  Evaluator.h  IEvaluator.h  MoECacheModel.hpp  MoERouting.h  PersistentThreadPool.hpp  SimpleEvalContext.cpp  SimpleEvalContext.h  WDLConverter.hpp
engine/src/search/: ISearch.h  MCTS.cpp  MCTS.h  MovePicker.cpp  MovePicker.h  Negamax.cpp  Negamax.h  SearchHeuristics.h  TT.cpp  TT.h  TablebaseFallback.cpp  TablebaseFallback.h  TimeManager.cpp  TimeManager.h
engine/src/tablebases/: Tablebase.cpp  Tablebase.h  download_tb.sh  tmp.ipynb
engine/src/tools/: benchmark_eval.cpp  compare_evals.cpp  eval_raw.cpp
engine/src/uci/: UCI.cpp  UCI.h  UciOptions.cpp  UciOptions.h
preprocessing/: CMakeLists.txt  Makefile  split_preprocess_two_drives.sh
preprocessing/include/: EvalNormalizer.hpp  ExpertRouter.hpp  FactorizedFeatureExtractor.hpp  FeatureExtractor.hpp  WDLNormalizer.hpp  Writers.hpp
preprocessing/lib/progressbar/: progressbar.hpp
preprocessing/src/: FactorizedFeatureExtractor.cpp  FeatureExtractor.cpp  Writers.cpp  main.cpp
tools/: extract_tree.sh  extract_tree_safe.py  search_tree.json.bak_run  static_eval.sh  visualize_tree.py
training/: dataset.py  dataset_moe.py  dataset_simple.py  export.py  export_light_moe.py  loss.py  model.py  model_light_moe.py  model_repvgg.py  model_simple.py  run.py  run.sh  train.py  train.sh  train_light_moe.py  train_light_moe_full.sh  utils.py
